--- a/sass/utilities/derived-variables.sass
+++ b/sass/utilities/derived-variables.sass
@@ -224,4 +224,5 @@ $sizes: v("size-1") v("size-2") v("size-3") v("size-4") v("size-5") v("size-6") 
 
 @if $css_vars and $shorten
   @each $var in $css_vars
-    $_: shorten-var($var) //Register in short map
+    // Register in short map
+    $_: shorten-var($var)
