Added doc for themes

--- a/docs/bulma-docs.sass
+++ b/docs/bulma-docs.sass
@@ -1,6 +1,6 @@
 @charset "utf-8"
 
-$themeable: "full" !default
+$themeable: true !default
 
 $bootstrap: #6f5499
 $github: #333333
@@ -100,9 +100,6 @@ $pink: vAdjust("purple", $hue: hue($pink) - getRegistered("purple-h"), $saturati
 @import "./_sass/book"
 @import "./_sass/native"
 @import "./_sass/focus"
-
-@if $themeable != "full"
-+theme("default")
 
 +theme("dark")
   @import "../bulma-dark"
