--- a/sass/utilities/functions.sass
+++ b/sass/utilities/functions.sass
@@ -394,7 +394,7 @@ $bulma_used_vars: ()
   @return --blm-#{shorten-var($name)}
 
 @function v($name)
-  @if $themeable == "full"
+  @if $themeable == true
     $value: getRegistered($name) //Make sure to let the compiler know we used this variable and all it's parents
     @if $value
       @return var(varName($name))
