--- a/test/sass/customize.scss
+++ b/test/sass/customize.scss
@@ -4,26 +4,24 @@
 @import url('https://fonts.googleapis.com/css?family=Nunito:400,700');
 
 // Set your brand colors
-$purple: #8A4D76;
-$pink: #FA7C91;
-$brown: #757763;
-$beige-light: #D0D1CD;
-$beige-lighter: #EFF0EB;
++register("purple", #8A4D76)
++register("pink", #FA7C91)
++register("brown", #757763)
++register("beige-light", #D0D1CD)
++register("beige-lighter", #EFF0EB)
 
 // Update Bulma's global variables
-$family-sans-serif: "Nunito", sans-serif;
-$grey-dark: $brown;
-$grey-light: $beige-light;
-$primary: $purple;
-$link: $pink;
-$widescreen-enabled: false;
-$fullhd-enabled: false;
++register("family-sans-serif", ("Nunito", sans-serif))
++register("grey-dark", v("brown"))
++register("grey-light", v("beige-light"))
++register("primary", v("purple"))
++register("link", v("pink"))
 
 // Update some of Bulma's component variables
-$body-background-color: $beige-lighter;
-$control-border-width: 2px;
-$input-border-color: transparent;
-$input-shadow: none;
++register("control-border-width", 2px)
++register("input-background-color", v("beige-lighter")
++register("input-border-color", transparent)
++register("input-shadow", none)
 
 // Import only what you need from Bulma
 @import "../../sass/utilities/_all.sass";
