--- a/test/sass/theme.scss
+++ b/test/sass/theme.scss
@@ -2,8 +2,6 @@ $themeable: true;
 
 @import "../bulma";
 
-@include theme("default");
-
-@include theme("darkly") {
-  @import "../themes/darkly";
++theme("darkly") {
+  @import "../themes/dark";
 }
