--- a/test/themes/dark.scss
+++ b/test/themes/dark.scss
@@ -1,119 +1,118 @@
 ////////////////////////////////////////////////
 // DARKLY
 ////////////////////////////////////////////////
-$grey-lighter: vRegister("grey-lighter", #dbdee0);
-$grey-light: vRegister("grey-light", #8c9b9d);
++register("grey-lighter", #dbdee0);
++register("grey-light", #8c9b9d);
 
-$grey: vRegister("grey", vDarken("grey-light", 18%));
-$grey-dark: vRegister("grey-dark", vDarken("grey", 18%));
-$grey-darker: vRegister("grey-darker", vDarken("grey", 23%));
++register("grey", vDarken("grey-light", 18%));
++register("grey-dark", vDarken("grey", 18%));
++register("grey-darker", vDarken("grey", 23%));
 
-$orange: vRegister("orange", #e67e22);
-$yellow: vRegister("yellow", #f1b70e);
-$green: vRegister("green", #2ecc71);
-$turquoise: vRegister("turquoise", #1abc9c);
-$blue: vRegister("blue", #3498db);
-$purple: vRegister("purple", #8e44ad);
-$red: vRegister("red", #e74c3c);
-$white-ter: vRegister("white-ter", #ecf0f1);
-$primary: #375a7f !default;
-$yellow-invert: vRegister("yellow-invert", #fff);
++register("orange", #e67e22);
++register("yellow", #f1b70e);
++register("green", #2ecc71);
++register("turquoise", #1abc9c);
++register("blue", #3498db);
++register("purple", #8e44ad);
++register("red", #e74c3c);
++register("white-ter", #ecf0f1);
++register("yellow-invert", #fff);
 
-$primary: vRegister("primary", $primary);
++register("primary", #375a7f, true);
 
-$family-sans-serif: vRegister("family-sans-serif", ("Lato", -apple-system, BlinkMacSystemFont, "Segoe UI",
++register("family-sans-serif", ("Lato", -apple-system, BlinkMacSystemFont, "Segoe UI",
 "Helvetica Neue", "Helvetica", "Arial", sans-serif));
-$family-monospace: vRegister("family-monospace", ("Inconsolata", "Consolas", "Monaco", monospace));
++register("family-monospace", ("Inconsolata", "Consolas", "Monaco", monospace));
 
-$radius-small: vRegister("radius-small", 3px);
-$radius: vRegister("radius", 0.4em);
-$radius-large: vRegister("radius-large", 8px);
-$size-6: vRegister("size-6", 15px);
-$size-7: vRegister("size-7", 0.85em);
-$title-weight: vRegister("title-weight", 500);
-$subtitle-weight: vRegister("subtitle-weight", 400);
-$subtitle-color: vRegister("subtitle-color", v("grey-dark"));
++register("radius-small", 3px);
++register("radius", 0.4em);
++register("radius-large", 8px);
++register("size-6", 15px);
++register("size-7", 0.85em);
++register("title-weight", 500);
++register("subtitle-weight", 400);
++register("subtitle-color", v("grey-dark"));
 
-$border-width: vRegister("border-width", 2px);
-$border: vRegister("border", v("grey"));
++register("border-width", 2px);
++register("border", v("grey"));
 
-$body-background-color: vRegister("body-background-color", vDarken("grey-darker", 4%));
-$body-size: vRegister("body-size", 15px);
++register("body-background-color", vDarken("grey-darker", 4%));
++register("body-size", 15px);
 
-$background: vRegister("background", v("grey-darker"));
-$footer-background-color: vRegister("footer-background-color", v("background"));
-$button-background-color: vRegister("button-background-color", v("background"));
-$button-border-color: vLighten("button-background-color", 15%);
++register("background", v("grey-darker"));
++register("footer-background-color", v("background"));
++register("button-background-color", v("background"));
++rgister("button-border-color", vLighten("button-background-color", 15%));
 
-$title-color: vRegister("title-color", #fff);
-$subtitle-color: vRegister("subtitle-color", v("grey-light"));
-$subtitle-strong-color: vRegister("subtitle-strong-color", v("grey-light"));
++register("title-color", #fff);
++register("subtitle-color", v("grey-light"));
++register("subtitle-strong-color", v("grey-light"));
 
-$text: vRegister("text", #fff);
-$text-light: vRegister("text-light", vLighten("text", 10%));
-$text-strong: vRegister("text-strong", vDarken("text", 5%));
++register("text", #fff);
++register("text-light", vLighten("text", 10%));
++register("text-strong", vDarken("text", 5%));
 
-$box-color: vRegister("box-color", v("text"));
-$box-background-color: vRegister("box-background-color", v("grey-dark"));
-$box-shadow: vRegister("box-shadow", none);
++register("box-color", v("text"));
++register("box-background-color", v("grey-dark"));
++register("box-shadow", none);
 
-$link: vRegister("link", v("turquoise"));
-$link-hover: vRegister("link-hover", vLighten("link", 5%));
-$link-focus: vRegister("link-focus", vDarken("link", 5%));
-$link-active: vRegister("link-active", vDarken("link", 5%));
-$link-focus-border: vRegister("link-focus-border", v("grey-light"));
++register("link", v("turquoise"));
++register("link-hover", vLighten("link", 5%));
++register("link-focus", vDarken("link", 5%));
++register("link-active", vDarken("link", 5%));
++register("link-focus-border", v("grey-light"));
 
-$button-color: vRegister("button-color", v("primary"));
-$button-hover-color: vRegister("button-hover-color", vDarken("text", 5%)); // text-dark
-$button-focus: vRegister("button-focus", vDarken("text", 5%)); // text-dark
-$button-active-color: vRegister("button-active-color", vDarken("text", 5%)); // text-dark
-$button-disabled-background-color: vRegister("button-disabled-background-color", v("grey-light"));
++register("button-color", v("primary"));
++register("button-hover-color", vDarken("text", 5%)); // text-dark
++register("button-focus", vDarken("text", 5%)); // text-dark
++register("button-active-color", vDarken("text", 5%)); // text-dark
++register("button-disabled-background-color", v("grey-light"));
 
-$input-color: vRegister("input-color", v("grey-darker"));
-$input-icon-color: vRegister("input-icon-color", v("grey"));
-$input-icon-active-color: vRegister("input-icon-active-color", v("input-color"));
-$input-hover-color: vRegister("input-hover-color", v("grey-light"));
-$input-disabled-background-color: vRegister("input-disabled-background-color", v("grey-light"));
-$input-disabled-border: vRegister("input-disabled-border", v("grey-lighter"));
++register("input-color", v("grey-darker"));
++register("input-icon-color", v("grey"));
++register("input-icon-active-color", v("input-color"));
++register("input-hover-color", v("grey-light"));
++register("input-disabled-background-color", v("grey-light"));
++register("input-disabled-border", v("grey-lighter"));
 
-$table-color: vRegister("table-color", v("text"));
-$table-head: vRegister("table-head", v("grey-lighter"));
-$table-background-color: vRegister("table-background-color", v("grey-dark"));
-$table-cell-border: vRegister("table-cell-border", 1px solid v("grey"));
++register("table-color", v("text"));
++register("table-head", v("grey-lighter"));
++register("table-background-color", v("grey-dark"));
++register("table-cell-border", 1px solid v("grey"));
 
-$table-row-hover-background-color: vRegister("table-row-hover-background-color", v("grey-darker"));
-$table-striped-row-even-background-color: vRegister("table-striped-row-even-background-color", v("grey-darker"));
-$table-striped-row-even-hover-background-color: vRegister("table-striped-row-even-hover-background-color", vLighten("grey-darker", 2%));
++register("table-row-hover-background-color", v("grey-darker"));
++register("table-striped-row-even-background-color", v("grey-darker"));
++register("table-striped-row-even-hover-background-color", vLighten("grey-darker", 2%));
 
-$pagination-color: vRegister("pagination-color", v("link"));
-$pagination-border-color: vRegister("pagination-border-color", v("border"));
++register("pagination-color", v("link"));
++register("pagination-border-color", v("border"));
 
-$navbar-height: vRegister("navbar-height", 4rem);
++register("navbar-height", 4rem);
 
-$navbar-background-color: vRegister("navbar-background-color", v("primary"));
-$navbar-item-color: vRegister("navbar-item-color", v("text"));
-$navbar-item-hover-color: vRegister("navbar-item-hover-color", v("link"));
-$navbar-item-hover-background-color: vRegister("navbar-item-hover-background-color", transparent);
-$navbar-item-active-color: vRegister("navbar-item-active-color", v("link"));
-$navbar-dropdown-arrow: vRegister("navbar-dropdown-arrow", v("white"));
-$navbar-divider-background-color: vRegister("navbar-divider-background-color", vAlphaChange("black", .2));
-$navbar-dropdown-border-top: vRegister("navbar-dropdown-border-top", 1px solid v("navbar-divider-background-color"));
-$navbar-dropdown-background-color: vRegister("navbar-dropdown-background-color", v("primary"));
-$navbar-dropdown-item-hover-color: vRegister("navbar-dropdown-item-hover-color", v("grey-lighter"));
-$navbar-dropdown-item-hover-background-color: vRegister("navbar-dropdown-item-hover-background-color", transparent);
-$navbar-dropdown-item-active-background-color: vRegister("navbar-dropdown-item-active-background-color", transparent);
-$navbar-dropdown-item-active-color: vRegister("navbar-dropdown-item-active-color", v("link"));
++register("navbar-background-color", v("primary"));
++register("navbar-item-color", v("text"));
++register("navbar-item-hover-color", v("link"));
++register("navbar-item-hover-background-color", transparent);
++register("navbar-item-active-color", v("link"));
++register("navbar-dropdown-arrow", v("white"));
++register("navbar-divider-background-color", vAlphaChange("black", .2));
++register("navbar-dropdown-border-top", 1px solid v("navbar-divider-background-color"));
++register("navbar-dropdown-background-color", v("primary"));
++register("navbar-dropdown-item-hover-color", v("grey-lighter"));
++register("navbar-dropdown-item-hover-background-color", transparent);
++register("navbar-dropdown-item-active-background-color", transparent);
++register("navbar-dropdown-item-active-color", v("link"));
 
-$dropdown-content-background-color: vRegister("dropdown-content-background-color", v("background"));
-$dropdown-item-color: vRegister("dropdown-item-color", v("text"));
++register("dropdown-content-background-color", v("background"));
++register("dropdown-item-color", v("text"));
 
-$progress-value-background-color: vRegister("progress-value-background-color", v("grey-lighter"));
++register("progress-value-background-color", v("grey-lighter"));
 
-$file-cta-background-color: vRegister("file-cta-background-color", v("grey-darker"));
++register("file-cta-background-color", v("grey-darker"));
 
-$progress-bar-background-color: vRegister("progress-bar-background-color", v("grey-dark"));
++register("progress-bar-background-color", v("grey-dark"));
 
-$panel-heading-background-color: vRegister("panel-heading-background-color", v("grey-dark"));
++register("panel-heading-background-color", v("grey-dark"));
 
 
 // Overrides
