--- a/bulma-dark.sass
+++ b/bulma-dark.sass
@@ -1,34 +1,36 @@
 
 // General colors
 
-$scheme-main: register("scheme-main", v("black"))
-$scheme-main-bis: register("scheme-main-bis", v("black-bis"))
-$scheme-main-ter: register("scheme-main-ter", v("black-ter"))
-$scheme-invert: register("scheme-invert", v("white"))
-$scheme-invert-bis: register("scheme-invert-bis", v("white-bis"))
-$scheme-invert-ter: register("scheme-invert-ter", v("white-ter"))
++register("scheme-main", v("black"))
++register("scheme-main-bis", v("black-bis"))
++register("scheme-main-ter", v("black-ter"))
++register("scheme-invert", v("white"))
++register("scheme-invert-bis", v("white-bis"))
++register("scheme-invert-ter", v("white-ter"))
 
-$background: register("background", v("black-ter"))
++register("background", v("black-ter"))
 
-$border: register("border", v("grey-darker"))
-$border-hover: register("border-hover", v("grey-dark"))
-$border-light: register("border-light", v("grey-darker"))
-$border-light-hover: register("border-light-hover", v("grey-dark"))
+// Border colors
+
++register("border", v("grey-darker"))
++register("border-hover", v("grey-dark"))
++register("border-light", v("grey-darker"))
++register("border-light-hover", v("grey-dark"))
 
 // Text colors
 
-$text: register("text", v("grey-light"))
-$text-invert: register("text-invert", v("grey-darker"))
-$text-light: register("text-light", v("grey"))
-$text-strong: register("text-strong", v("white"))
++register("text", v("grey-light"))
++register("text-invert", v("grey-darker"))
++register("text-light", v("grey"))
++register("text-strong", v("white"))
 
 // Link colors
 
-$link-hover: register("link-hover", v("white"))
-$link-hover-border: register("link-hover-border", v("grey-dark"))
++register("link-hover", v("white"))
++register("link-hover-border", v("grey-dark"))
 
-$link-focus: register("link-focus", v("white"))
-$link-focus-border: register("link-focus-border", v("blue"))
++register("link-focus", v("white"))
++register("link-focus-border", v("blue"))
 
-$link-active: register("link-active", v("white"))
-$link-active-border: register("link-active-border", v("grey-light"))
++register("link-active", v("white"))
++register("link-active-border", v("grey-light"))
