--- a/docs/_includes/snippets/customized.html
+++ b/docs/_includes/snippets/customized.html
@@ -2,24 +2,24 @@
 @import url('https://fonts.googleapis.com/css?family=Nunito:400,700');
 
 // Set your brand colors
-$purple: #8A4D76;
-$pink: #FA7C91;
-$brown: #757763;
-$beige-light: #D0D1CD;
-$beige-lighter: #EFF0EB;
++register("purple", #8A4D76)
++register("pink", #FA7C91)
++register("brown", #757763)
++register("beige-light", #D0D1CD)
++register("beige-lighter", #EFF0EB)
 
 // Update Bulma's global variables
-$family-sans-serif: "Nunito", sans-serif;
-$grey-dark: $brown;
-$grey-light: $beige-light;
-$primary: $purple;
-$link: $pink;
++register("family-sans-serif", ("Nunito", sans-serif))
++register("grey-dark", v("brown"))
++register("grey-light", v("beige-light"))
++register("primary", v("purple"))
++register("link", v("pink"))
 
 // Update some of Bulma's component variables
-$control-border-width: 2px;
-$input-background-color: $beige-lighter;
-$input-border-color: transparent;
-$input-shadow: none;
++register("control-border-width", 2px)
++register("input-background-color", v("beige-lighter")
++register("input-border-color", transparent)
++register("input-shadow", none)
 
 // Import the rest of Bulma
 @import "../path/to/bulma";
