Fix rtl with border radius

--- a/css/bulma-rtl.css
+++ b/css/bulma-rtl.css
@@ -6821,7 +6821,7 @@ label.panel-block:hover {
 
 .tabs.is-boxed a {
   border: 1px solid transparent;
-  border-radius: 4px 0 0 4px;
+  border-radius: 4px 4px 0 0;
 }
 
 .tabs.is-boxed a:hover {
