Created and added a postcss plugin to optimize the css variables and updated doc

--- a/css/bulma.themeable.css
+++ b/css/bulma.themeable.css
@@ -5948,9 +5948,9 @@ body.has-navbar-fixed-bottom {
   color: var(--blm-nav-burger-clr);
   cursor: pointer;
   display: block;
-  height: 3.25rem;
+  height: var(--blm-nav-height);
   position: relative;
-  width: 3.25rem;
+  width: var(--blm-nav-height);
   margin-left: auto;
 }
 
@@ -11387,6 +11387,11 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
   --blm-dark-s: var(--blm-grey-darker-s);
   --blm-dark-l: var(--blm-grey-darker-l);
   --blm-dark-a: var(--blm-grey-darker-a);
+  --blm-black: hsla(var(--blm-black-h), var(--blm-black-s), var(--blm-black-l), var(--blm-black-a));
+  --blm-black-h: 0;
+  --blm-black-s: 0%;
+  --blm-black-l: 4%;
+  --blm-black-a: 1;
   --blm-white: hsla(var(--blm-white-h), var(--blm-white-s), var(--blm-white-l), var(--blm-white-a));
   --blm-white-h: 0;
   --blm-white-s: 0%;
@@ -11397,11 +11402,6 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
   --blm-white-bis-s: 0%;
   --blm-white-bis-l: 98%;
   --blm-white-bis-a: 1;
-  --blm-black: hsla(var(--blm-black-h), var(--blm-black-s), var(--blm-black-l), var(--blm-black-a));
-  --blm-black-h: 0;
-  --blm-black-s: 0%;
-  --blm-black-l: 4%;
-  --blm-black-a: 1;
   --blm-black-bis: hsla(var(--blm-black-bis-h), var(--blm-black-bis-s), var(--blm-black-bis-l), var(--blm-black-bis-a));
   --blm-black-bis-h: 0;
   --blm-black-bis-s: 0%;
@@ -11623,15 +11623,15 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
   --blm-bt-txt-hov-clr-l: var(--blm-txt-strong-l);
   --blm-bt-txt-hov-clr-a: var(--blm-txt-strong-a);
   --blm-white-inv: hsla(var(--blm-white-inv-h), var(--blm-white-inv-s), var(--blm-white-inv-l), var(--blm-white-inv-a));
-  --blm-white-inv-h: 0;
-  --blm-white-inv-s: 0%;
-  --blm-white-inv-l: 4%;
-  --blm-white-inv-a: 1;
+  --blm-white-inv-h: var(--blm-black-h);
+  --blm-white-inv-s: var(--blm-black-s);
+  --blm-white-inv-l: var(--blm-black-l);
+  --blm-white-inv-a: var(--blm-black-a);
   --blm-black-inv: hsla(var(--blm-black-inv-h), var(--blm-black-inv-s), var(--blm-black-inv-l), var(--blm-black-inv-a));
-  --blm-black-inv-h: 0;
-  --blm-black-inv-s: 0%;
-  --blm-black-inv-l: 100%;
-  --blm-black-inv-a: 1;
+  --blm-black-inv-h: var(--blm-white-h);
+  --blm-black-inv-s: var(--blm-white-s);
+  --blm-black-inv-l: var(--blm-white-l);
+  --blm-black-inv-a: var(--blm-white-a);
   --blm-light-inv: hsla(var(--blm-light-inv-h), var(--blm-light-inv-s), var(--blm-light-inv-l), var(--blm-light-inv-a));
   --blm-light-inv-h: 0;
   --blm-light-inv-s: 0%;
