--- a/docs/_includes/steps/add-custom-styles.html
+++ b/docs/_includes/steps/add-custom-styles.html
@@ -5,26 +5,27 @@
 @import url('https://fonts.googleapis.com/css?family=Nunito:400,700');
 
 // Set your brand colors
-$purple: #8A4D76;
-$pink: #FA7C91;
-$brown: #757763;
-$beige-light: #D0D1CD;
-$beige-lighter: #EFF0EB;
+$_: register("purple", #8A4D76);
+$_: register("pink", #FA7C91);
+$_: register("brown", #757763);
+$_: register("beige-light", #D0D1CD);
+$_: register("beige-lighter", #EFF0EB);
 
 // Update Bulma's global variables
-$family-sans-serif: "Nunito", sans-serif;
-$grey-dark: $brown;
-$grey-light: $beige-light;
-$primary: $purple;
-$link: $pink;
+$_: register("family-sans-serif", ("Nunito", sans-serif));
+$_: register("grey-dark", v("brown"));
+$_: register("grey-light", v("beige-light"));
+$_: register("primary", v("purple"));
+$_: register("link", v("pink"));
+
 $widescreen-enabled: false;
 $fullhd-enabled: false;
 
 // Update some of Bulma's component variables
-$body-background-color: $beige-lighter;
-$control-border-width: 2px;
-$input-border-color: transparent;
-$input-shadow: none;
+$_: register("body-background-color", v("beige-lighter"));
+$_: register("control-border-width", 2px);
+$_: register("input-border-color", transparent);
+$_: register("input-shadow", none);
 
 // Import only what you need from Bulma
 @import "../node_modules/bulma/sass/utilities/_all.sass";
