--- a/sass/components/navbar.sass
+++ b/sass/components/navbar.sass
@@ -189,7 +189,7 @@ body
 
 .navbar-burger
   color: v("navbar-burger-color")
-  +hamburger($navbar-height)
+  +hamburger(v("navbar-height"))
   +ltr-property("margin-left", auto)
 
 .navbar-menu
