--- a/sass/components/tabs.sass
+++ b/sass/components/tabs.sass
@@ -117,7 +117,7 @@ $tabs-toggle-link-active-color: v("link-invert") !default
   &.is-boxed
     a
       border: 1px solid transparent
-      +ltr-property("border-radius", v("tabs-boxed-link-radius") v("tabs-boxed-link-radius") 0 0)
+      border-radius: v("tabs-boxed-link-radius") v("tabs-boxed-link-radius") 0 0
       &:hover
         background-color: v("tabs-boxed-link-hover-background-color")
         border-bottom-color: v("tabs-boxed-link-hover-border-bottom-color")
