--- a/sass/utilities/derived-variables.sass
+++ b/sass/utilities/derived-variables.sass
@@ -58,8 +58,8 @@ $light-invert: findColorInvert("light") !default
 $dark-invert: findColorInvert("dark") !default
 
 
-+register(white-invert, $black, true)
-+register(black-invert, $white, true)
++register(white-invert, v("black"), true)
++register(black-invert, v("white"), true)
 
 +register(primary-invert, $primary-invert, true)
 +register(primary-light, $primary-light, true)
