Return value in register for maximum BC

--- a/sass/utilities/functions.sass
+++ b/sass/utilities/functions.sass
@@ -385,7 +385,7 @@ $bulma_used_vars: ()
   @else
     $_: __register(($name: $value))
 
-  @return $name
+  @return $value
 
 =register($name, $value, $default: false)
   $_: register($name, $value, $default)
