Added a selector for the light button in a disabled fieldset

--- a/sass/elements/button.sass
+++ b/sass/elements/button.sass
@@ -211,7 +211,8 @@ $button-static-border-color: $border !default
       @if length($pair) >= 4
         $color-light: nth($pair, 3)
         $color-dark: nth($pair, 4)
-        &.is-light
+        &.is-light,
+        fieldset[disabled] &.is-light
           background-color: $color-light
           color: $color-dark
           &:hover,
