--- a/sass/components/modal.sass
+++ b/sass/components/modal.sass
@@ -47,7 +47,7 @@ $modal-card-body-padding: 20px !default
 
 .modal-content,
 .modal-card
-  margin: 0 $modal-content-margin-mobile
+  padding: 0 $modal-content-margin-mobile
   max-height: calc(100vh - #{$modal-content-spacing-mobile})
   overflow: auto
   position: relative
