Remove height auto from img

--- a/css/bulma.css
+++ b/css/bulma.css
@@ -286,7 +286,10 @@ html {
   box-sizing: inherit;
 }
 
-img,
+img {
+  max-width: 100%;
+}
+
 video {
   height: auto;
   max-width: 100%;
@@ -389,7 +392,6 @@ hr {
 }
 
 img {
-  height: auto;
   max-width: 100%;
 }
 
