Apply the same style as icons in a button for icons directly adjacent to an input

--- a/sass/elements/button.sass
+++ b/sass/elements/button.sass
@@ -79,6 +79,9 @@ $button-static-border-color: $border !default
     &:first-child:last-child
       margin-left: calc(#{-1 / 2 * $button-padding-horizontal} - #{$button-border-width})
       margin-right: calc(#{-1 / 2 * $button-padding-horizontal} - #{$button-border-width})
+  + .icon
+    margin-left: calc(#{-1 / 2 * $button-padding-horizontal} - #{$button-border-width})
+    margin-right: calc(#{-1 / 2 * $button-padding-horizontal} - #{$button-border-width})
   // States
   &:hover,
   &.is-hovered
