Add flex-{grow,shrink}: 0

--- a/sass/helpers/flex.sass
+++ b/sass/helpers/flex.sass
@@ -1,5 +1,5 @@
-$flex-directions: row, row-reverse, column, column-reverse
-@each $value in $flex-directions
+$flex-directions-values: row, row-reverse, column, column-reverse
+@each $value in $flex-directions-values
     .is-flex-direction-#{$value}
         flex-direction: $value !important
 
@@ -25,6 +25,6 @@ $align-self-values: auto, flex-start, flex-end, center, baseline, stretch
 
 $flex-operators: grow, shrink
 @each $operator in $flex-operators
-    @for $i from 1 through 5
+    @for $i from 0 through 5
         .is-flex-#{$operator}-#{$i}
             flex-#{$operator}: $i !important
